--- a/src/lib/locale/en.json
+++ b/src/lib/locale/en.json
@@ -1,3 +1,35 @@
 {
-
+  "loginPage": {
+    "email": "Email",
+    "password": "Password",
+    "login": "Login",
+    "signUpText": "Not have an account yet? Sign up",
+    "forgotPassword": "I forgot my password",
+    "iDontWantToLogin": "I don't want to login"
+  },
+  "formErrors": {
+    "emptyEmailError": "Please enter your email",
+    "invalidEmailError": "Please insert a valid email",
+    "emptyPasswordError": "Please enter your password",
+    "shortPasswordError": "Your password must have at least 6 characters",
+    "emptyConfirmPasswordError": "Please confirm your password",
+    "invalidConfirmPasswordError": "Your password is not the same as your confirmation",
+    "emptyZipCodeError": "ZIP code is required",
+    "invalidZipCodeError": "Invalid ZIP code",
+    "emptyAddressError": "Address is required",
+    "shortAddressError": "Address must be at least 10 characters long",
+    "emptyCityError": "City is required",
+    "shortCityError": "City must be at least 5 characters long",
+    "emptyStateError": "State is required",
+    "shortStateError": "State must be at least 2 characters long",
+    "emptyFullNameError": "Full name is required",
+    "shortFullNameError": "Full name must be at least 5 characters long",
+    "emptyNameOnCardError": "Name on card is required",
+    "invalidCardNumberError": "Card number must be in the format XXXX XXXX XXXX XXXX",
+    "emptyCardNumberError": "Card number is required",
+    "invalidExpDateError": "Expiration date must be in MM/YY format",
+    "emptyExpDateError": "Expiration date is required",
+    "invalidCVVError": "CVV must contain 3 or 4 digits",
+    "emptyCVVError": "CVV is required"
+  }
 }
