--- a/src/lib/locale/pt.json
+++ b/src/lib/locale/pt.json
@@ -15,6 +15,51 @@
     "confirmPassword": "Confirme a sua senha",
     "signUp": "Cadastre-se"
   },
+  "navigators": {
+    "checkout": "Finalizar compra",
+    "shippingAddress": "Adicionar endereço de entrega",
+    "cardForm": "Adicionar novo cartão"
+  },
+  "checkoutScreen": {
+    "unloggedAllert": "Você precisa entrar para completar a sua compra, vamos?",
+    "login": "Entrar"
+  },
+  "shippingAddresses": {
+    "shippingAddress": "Endereço de entrega",
+    "change": "Trocar",
+    "clickToAdd": "Clique para adicionar um endereço",
+    "zipCode": "CEP",
+    "address": "Endereço",
+    "city": "Cidade",
+    "state": "Estado",
+    "fullName": "Nome completo",
+    "saveAddress": "Salvar endereço"
+  },
+  "paymentMethod": {
+    "paymentMethod": "Forma de pagamento",
+    "change": "Trocar",
+    "noneAdded": "Nenhum adicionado",
+    "bankSlip": "Boleto Bancário",
+    "chooseMethod": "Escolha a forma de pagamento",
+    "creditCard": "Cartão de crédito ou débito",
+    "pix": "Pix",
+    "addNewCard": "Adicionar cartão",
+    "nameOnCard": "Nome no cartão",
+    "cardNumber": "Número no cartão",
+    "expDate": "Data de expiração",
+    "CVV": "Código de segurança",
+    "addCard": "Adicionar Cartão"
+  },
+  "deliveryMethod": {
+    "deliveryMethod":"Método de entrega",
+    "days": "dias"
+  },
+  "summary": {
+    "order": "Pedido",
+    "delivery": "Frete",
+    "summary": "Total",
+    "submitOrder": "Finalizar compra"
+  },
   "formErrors": {
     "emptyNameError": "Por favor, informe seu nome",
     "emptyEmailError": "Por favor, informe seu email",
@@ -39,6 +84,7 @@
     "invalidExpDateError": "A data de validade deve estar no formato MM/AA",
     "emptyExpDateError": "A data de validade é obrigatória",
     "invalidCVVError": "O CVV deve conter 3 ou 4 dígitos",
-    "emptyCVVError": "O CVV é obrigatório"
+    "emptyCVVError": "O CVV é obrigatório",
+    "zipCodeNotFound": "CEP não encontrado!"
   }
 }
