--- a/src/lib/locale/en.json
+++ b/src/lib/locale/en.json
@@ -111,7 +111,7 @@
     "continueShopping": "CONTINUE SHOPPING",
     "instructionText": "Pay your pix using the QR code above and \nthen follow the steps sent by email.",
     "downloadInvoice": "DOWNLOAD INVOICE",
-    "invoiceText": "Pay the invoice by {{date}} and then \nfollow the steps sent by email."
+    "invoiceText": "Pay the invoice by {{date}} and then \nfollow the steps sent by email.",
     "zipCodeNotFound": "Zip code not found!",
     "401Error": "Your email or password is incorrect",
     "403Error": "Forbidden. You do not have permission to access this resource.",
@@ -149,5 +149,4 @@
     "support": "Support",
     "suportDetails": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters"
   }
-}
 }
