--- a/src/lib/locale/pt.json
+++ b/src/lib/locale/pt.json
@@ -102,7 +102,7 @@
     "invalidExpDateError": "A data de validade deve estar no formato MM/AA",
     "emptyExpDateError": "A data de validade é obrigatória",
     "invalidCVVError": "O CVV deve conter 3 ou 4 dígitos",
-    "emptyCVVError": "O CVV é obrigatório"
+    "emptyCVVError": "O CVV é obrigatório",
     "zipCodeNotFound": "CEP não encontrado!"
   },
   "successScreen": {
@@ -111,7 +111,7 @@
     "continueShopping": "CONTINUE COMPRANDO",
     "instructionText": "Pague seu pix usando o código QR acima e \nsiga os passos enviados por e-mail.",
     "downloadInvoice": "BAIXAR BOLETO",
-    "invoiceText": "Pague a fatura até {{date}} e \nsiga as etapas enviadas por e-mail."
+    "invoiceText": "Pague a fatura até {{date}} e \nsiga as etapas enviadas por e-mail.",
     "zipCodeNotFound": "CEP não encontrado!",
     "401Error": "Seu email ou senha estão incorretos",
     "403Error": "Proibido, você não tem permissão para acessar esse recurso",
