--- a/src/lib/locale/en.json
+++ b/src/lib/locale/en.json
@@ -108,6 +108,7 @@
   "successScreen": {
     "successText": "Success!",
     "thankYouText": "Your order will be delivered soon. \nThank you for choosing our app!",
+    "continue": "Continue",
     "continueShopping": "CONTINUE SHOPPING",
     "instructionText": "Pay your pix using the QR code above and \nthen follow the steps sent by email.",
     "downloadInvoice": "DOWNLOAD INVOICE",
